PROJECT(PLUGINS_MASTER)

IF(NOT MSVC)
    SET(LIBRARY_OUTPUT_PATH "${LIBRARY_OUTPUT_PATH}/${PLUGINS}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${PLUGINS}")
ENDIF()

SET(CMAKE_SHARED_MODULE_PREFIX ${PLUGIN_PREFIX})


IF(BUILD_WITH_BOOST)
	ADD_SUBDIRECTORY(LogSystem)
	ADD_SUBDIRECTORY(FileSystem)
endif()



